WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44574
[DRT/Chromium] Fix 28 inspector test crashes
https://bugs.webkit.org/show_bug.cgi?id=44574
Summary
[DRT/Chromium] Fix 28 inspector test crashes
Kent Tamura
Reported
2010-08-24 19:12:32 PDT
[DRT/Chromium] Fix 28 inspector test crashes
Attachments
Patch
(6.25 KB, patch)
2010-08-24 19:16 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2010-08-24 19:16:08 PDT
Created
attachment 65358
[details]
Patch
Dimitri Glazkov (Google)
Comment 2
2010-08-24 19:43:10 PDT
Comment on
attachment 65358
[details]
Patch Darn it! I think I need to say bye-bye to my mixer :)
Kent Tamura
Comment 3
2010-08-24 19:59:54 PDT
Comment on
attachment 65358
[details]
Patch Clearing flags on attachment: 65358 Committed
r65966
: <
http://trac.webkit.org/changeset/65966
>
Kent Tamura
Comment 4
2010-08-24 20:00:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug