2010-08-24  Kent Tamura  <tkent@chromium.org>

Reviewed by Dimitri Glazkov.

        [DRT/Chromium] Fix 28 inspector test crashes
        https://bugs.webkit.org/show_bug.cgi?id=44574

        * platform/chromium/drt_expectations.txt:
2010-08-24  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        [DRT/Chromium] Fix 28 inspector test crashes
        https://bugs.webkit.org/show_bug.cgi?id=44574

        Reset DevToolsClient and DevToolsAgent before closing a DevTools
        WebView in order to avoid accessing to a deleted WebView instance.

        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::closeDevTools):

Canonical link: https://commits.webkit.org/56745@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65966 268f45cc-cd09-0410-ab3c-d52691b4dbfc