WebKitTools/DumpRenderTree/chromium/TestShell.cpp
@@ -144,6 +144,10 @@ void TestShell::showDevTools()
 void TestShell::closeDevTools()
 {
     if (m_devTools) {
+        m_drtDevToolsAgent->reset();
+        if (m_drtDevToolsClient)
+            m_drtDevToolsClient->reset();
+        m_drtDevToolsAgent->setWebView(0);
         closeWindow(m_devTools);
         m_devTools = 0;
     }
